<resources>
    <string name="app_name">Nectar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="entry">Get it Start</string>
    <string name="username">Username</string>
    <string name="project_name">Project name</string>
    <string name="password">Password</string>
    <string name="remember_bar">Remember Username and Password</string>
    <string name="sign_in">Sign in</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="alarm_name_with_star">Alarm Name*</string>
    <string name="medium_text">Medium Text</string>
    <string name="metric">Metric</string>
    <string name="aggregation_method">Aggregation Method</string>
    <string name="aggregation_method_short">CIDR</string>
    <string name="straight_line">-</string>
    <string name="threshold">Threshold</string>
    <string name="name">Name</string>
    <string name="name_with_star">Name*</string>
    <string name="configuration_group_attach">Attach to Configuration Group*</string>
    <string name="instance_attach">Instance*</string>
    <string name="container_name">Container Name</string>
    <string name="count">Count</string>
    <string name="bytes">Bytes</string>
    <string name="description">Description</string>
    <string name="datastore_type">Datastore Type</string>
    <string name="version">Version</string>
    <string name="database">Database</string>
    <string name="status">Status</string>
    <string name="volume">Volume</string>
    <string name="admin_status">Admin State</string>
    <string name="bootable">Bootable</string>
    <string name="ipaddress">IP Address</string>
    <string name="resource_pool">Resource Pool</string>
    <string name="rule">Rule</string>
    <string name="direction">Direction</string>
    <string name="open_port">Open Port (Port or Port Range)</string>
    <string name="from_port">From Port</string>
    <string name="to_port">To Port</string>
    <string name="port_range_hint">From 1 To 65535</string>
    <string name="remote">Remote</string>
    <string name="cidr">CIDR</string>
    <string name="launch_rule">Launch     new     rule</string>
    <string name="operator">Operator</string>
    <string name="granularity">Granularity</string>
    <string name="state">State</string>
    <string name="severity">Severity</string>
    <string name="instance_id">Instance ID</string>
    <string name="instance_name">Instance Name</string>
    <string name="datastore">Datastore</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="destination_container_with_star">Destination container*</string>
    <string name="path">Path</string>
    <string name="destination_object_name_with_star">Destination object name*</string>
    <string name="copy_object">Copy Object</string>
    <string name="type">Type</string>
    <string name="threshold_value">Threshold value</string>
    <string name="enter_value_here">Enter value here</string>
    <string name="choose_aggregation_method">Choose aggregation method</string>
    <string name="choose_comparison_operator">Choose comparison operator</string>
    <string name="granularity_value">Granularity value</string>
    <string name="alarm_state">Alarm state</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="container_name_with_star">Container Name*</string>
    <string name="cluster_name">Cluster Name</string>
    <string name="container_template_wtth_star">Container Template*</string>
    <string name="master_count_with_star">Master Count*</string>
    <string name="master_count">Master Count</string>
    <string name="node_count_with_star">Node Count*</string>
    <string name="node_count">Node Count</string>
    <string name="docker_volumeSize_with_star">DockerVolumeSize*</string>
    <string name="docker_volume_specification">Specify the size in GB for the docker volume</string>
    <string name="discovery_url">DiscoveryURL</string>
    <string name="discovery_url_specification">Specifies custom discovery url for node discovery</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_specification">Set to 0 for no timeout. The default is no timeout.</string>
    <string name="network_address">network address</string>
    <string name="datastore_with_star">Datastore*</string>
    <string name="container_access">Container Access</string>
    <string name="create_container">Create Container</string>
    <string name="database_instance_with_star">Database Instance*</string>
    <string name="create_database_backup">Create Database Backup</string>
    <string name="locality">Locality</string>
    <string name="availability_zone_with_star">Availability Zone*</string>
    <string name="create_instance">Create Instance</string>
    <string name="pool">Pool</string>
    <string name="allocate_ip">Allocate IP</string>
    <string name="pseudo_folder_name_with_star">Pseudo-folder Name*</string>
    <string name="write_name_here">write name here</string>
    <string name="create_folder">Create Folder</string>
    <string name="network_name_with_star">Network Name*</string>
    <string name="network_name">Network Name</string>
    <string name="admin_state">Admin State</string>
    <string name="create_network">Create Network</string>
    <string name="object_name_with_star">Object Name*</string>
    <string name="create_object">Create Object</string>
    <string name="port_name_with_star">Port Name*</string>
    <string name="create_port">Create Port</string>
    <string name="router_name_with_star">Router Name*</string>
    <string name="router_name">Router Name</string>
    <string name="external_network">External Network</string>
    <string name="create_router">Create Router</string>
    <string name="stack_name_with_star">Stack Name*</string>
    <string name="template_source_with_star">Create Router</string>
    <string name="template_url">Template URL</string>
    <string name="create_timeout_with_min">Creation Timeout (minutes)</string>
    <string name="sixty">60</string>
    <string name="subnet_name_with_star">Subnet Name*</string>
    <string name="ip_address_with_star">IP Address*</string>
    <string name="Subnet_name">Subnet Name</string>
    <string name="ip_version">IP Version</string>
    <string name="create_subnet">Create Subnet</string>
    <string name="volume_name_with_star">Volume Name*</string>
    <string name="volume_source_with_star">Volume Source*</string>
    <string name="no_source">No source, empty volume</string>
    <string name="size_gb_with_star">Size (GB)*</string>
    <string name="availability_zone">Availability Zone</string>
    <string name="create_volume">Create    Volume</string>
    <string name="id">ID</string>
    <string name="root_enabled">rootEnabled</string>
    <string name="resize_volume">Resize Volume</string>
    <string name="detach_configuration_group">Detach Configuration Group</string>
    <string name="disable_toot">Disable Root</string>
    <string name="image_name">Image Name</string>
    <string name="publi">Public</string>
    <string name="protect">Protected</string>
    <string name="format">Format</string>
    <string name="size">Size</string>
    <string name="create_time">Create Time</string>
    <string name="zone">Zone</string>
    <string name="empty_str"></string>
    <string name="ipv4_address">IPV4 Address</string>
    <string name="security">Security</string>
    <string name="key">Key</string>
    <string name="attached_volume">Attached Volume</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>
    <string name="suspend">SUSPEND</string>
    <string name="resume">SUSPEND</string>
    <string name="pause">PAUSE</string>
    <string name="unpause">UNPAUSE</string>
    <string name="reboot">REBOOT</string>
    <string name="snapshot">SNAPSHOT</string>
    <string name="delete">DELETE</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="public_key">Public Key</string>
    <string name="three_straight_line">---</string>
    <string name="flavor_with_star">Flavor*</string>
    <string name="instance_count">Instance Count</string>
    <string name="digit_one">1</string>
    <string name="instance_boot_source_with_star">Instance Boot Source*</string>
    <string name="boot_from_image">Boot From Image</string>
    <string name="image_name_with_star">Image Name*</string>
    <string name="key_pair">Key Pairs</string>
    <string name="security_groups">Security Groups</string>
    <string name="project_id">ProjectID</string>
    <string name="shared">Shared</string>
    <string name="mtu">MTU</string>
    <string name="port_name">Port Name</string>
    <string name="network_id">NetworkID</string>
    <string name="mac_address">MAC Address</string>
    <string name="resource_type_name">Resource Type Name</string>
    <string name="attribute">Attribute</string>
    <string name="properties">Properties</string>
    <string name="subnet_id">Subnet ID</string>
    <string name="snat">SNAT</string>
    <string name="stack_id">Stack ID</string>
    <string name="stack_name">Stack Name</string>
    <string name="rollback">Rollback</string>
    <string name="status_reason">Status Reason</string>
    <string name="check">CHECK</string>
    <string name="ip_pool">IP Pool</string>
    <string name="volume_snapshots">Volume Snapshots</string>
    <string name="volume_name">Volume Name</string>
    <string name="attach_to">Attach To</string>
    <string name="encrypted">Encrypted</string>
    <string name="volume_snapshot_name">Volume Snapshot Name</string>
    <string name="volume_zone">Volume Zone</string>
    <string name="key_pair_name_with_star">Key Pair Name*</string>
    <string name="public_key_with_star">Public Key*</string>
    <string name="medium_text_repeat">Medium TextMedium TextMedium TextMedium Text</string>
    <string name="small_text">Small Text</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="view_alarm_detail">View Alarm Detail</string>
    <string name="instance">Instance</string>
    <string name="show_configuration_group_detail">Show Configuration Group Detail</string>
    <string name="delete_configuration_group">Delete Configuration Group</string>
    <string name="public_container">Public Container</string>
    <string name="private_container">Private Container</string>
    <string name="view_container_folder">View Container Folder</string>
    <string name="delete_container">Delete Container</string>
    <string name="upload_object">Upload Object</string>
    <string name="show_backup_detail">Show Backup Detail</string>
    <string name="delete_backup">Delete Backup</string>
    <string name="boot_from_volume">Boot from volume</string>
    <string name="release_floating_ip">Release Floating IP</string>
    <string name="delete_object">Delete Object</string>
    <string name="view_image_detail">View Image Detail</string>
    <string name="delete_image">Delete Image</string>
    <string name="view_key_pair_detail">View Key Pair Detail</string>
    <string name="delete_key_pair">Delete Key Pair</string>
    <string name="view_networks_detail">View Networks Detail</string>
    <string name="view_subnet">View Subnet</string>
    <string name="view_ports">View Ports</string>
    <string name="delete_network">Delete Network</string>
    <string name="view_port_detail">View Port Detail</string>
    <string name="delete_port">Delete Port</string>
    <string name="view_router_detail">View Router Detail</string>
    <string name="edit_router">Edit Router</string>
</resources>