<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewNetworksDetail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/view_networks_detail"
        android:textColor="#0000ff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/viewSubnets"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/view_subnet"
        android:textColor="#0000ff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/viewPorts"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/view_ports"
        android:textColor="#0000ff"
        android:textSize="18sp" />



    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9e9e9e"
        />



    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9e9e9e"
        />



    <TextView
        android:id="@+id/deleteNetworks"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/delete_network"
        android:textColor="#FF4040"
        android:textSize="18sp" />





</LinearLayout>