<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.jianqingc.nectar.fragment.InstanceDetailFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/instance_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceIdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instanceIdTV"
            android:layout_alignStart="@+id/instanceIdTV"
            android:layout_below="@+id/instanceIdTV"
            android:layout_marginTop="10sp"
            android:text="@string/instance_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instanceIdTV"
            android:layout_alignStart="@+id/instanceIdTV"
            android:layout_below="@+id/instanceNameTV"
            android:layout_marginTop="10sp"
            android:text="@string/zone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/textView2"
            android:layout_marginRight="10sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#e9a92a" />

        <TextView
            android:id="@+id/instanceZoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/instanceZoneTV"
            android:layout_marginTop="10sp"
            android:text="@string/ipv4_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceIPAddressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_below="@+id/instanceIPAddressTV"
            android:layout_marginTop="10sp"
            android:text="@string/create_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceCreateTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_below="@+id/instanceCreateTimeTV"
            android:layout_marginTop="10sp"
            android:text="@string/image_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceImageNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/instanceImageNameTV"
            android:layout_marginTop="10sp"
            android:text="@string/security"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceSecurityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8"
            android:layout_below="@+id/instanceSecurityTV"
            android:layout_marginTop="10sp"
            android:text="@string/key"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceKeyPairTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_below="@+id/instanceKeyPairTV"
            android:layout_marginTop="10sp"
            android:text="@string/attached_volume"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instanceVolumeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="5sp"
            android:text="@string/empty_str"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_below="@+id/instanceVolumeTV"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10sp"
            android:id="@+id/view" />
        <Button
            android:id="@+id/stopBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:layout_below="@+id/resumeBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />


        <Button
            android:id="@+id/startBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_below="@+id/stopBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />


        <Button
            android:id="@+id/suspendBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/suspend"
            android:layout_below="@+id/unpauseBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />

        <Button
            android:id="@+id/resumeBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:layout_below="@+id/suspendBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />


        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="40sp" />

        <Button
            android:id="@+id/unpauseBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unpause"
            android:layout_below="@+id/pauseBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="15sp" />


        <Button
            android:id="@+id/rebootBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot"
            android:layout_below="@+id/startBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />
        <Button
            android:id="@+id/snapshotBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/snapshot"
            android:layout_below="@+id/rebootBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_below="@+id/snapshotBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            android:layout_marginBottom="60sp" />




    </RelativeLayout>

</ScrollView>

