<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailConfigGroup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/show_configuration_group_detail"
        android:textColor="#0000ff"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9e9e9e"
        />

    <TextView
        android:id="@+id/instanceConfigGroup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/instance"
        android:textColor="#0000ff"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#9e9e9e"
        />

    <TextView
        android:id="@+id/deleteCGD"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/detach_configuration_group"
        android:textColor="#FF4040"
        android:textSize="18sp" />


</LinearLayout>