<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="false">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.jianqingc.nectar.fragment.CreateAlarmFragment">

            <TextView
                android:id="@+id/newStackName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:text="@string/stack_name_with_star"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newStackName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/newStackName1"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:hint="@string/router_name"
                android:singleLine="true"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/StackTemplateSource1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/newStackName"
                android:layout_alignStart="@+id/newStackName"
                android:layout_below="@+id/newStackName"
                android:layout_marginTop="25sp"
                android:text="@string/template_source_with_star"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/StackTemplateSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/StackTemplateSource1"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:hint="@string/template_url"
                android:inputType="text|textUri"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/StackTimeout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/StackTemplateSource"
                android:layout_alignStart="@+id/StackTemplateSource"
                android:layout_below="@+id/StackTemplateSource"
                android:layout_marginTop="25sp"
                android:text="@string/create_timeout_with_min"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/StackTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/StackTimeout1"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:hint="@string/sixty"
                android:inputType="number"
                android:textSize="14sp" />

        </RelativeLayout>

        <requestFocus />
    </ScrollView>

    <LinearLayout
        android:layout_height="wrap_content"
        android:id="@+id/Routerbuttonbuttom"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        >

        <Button
            android:id="@+id/createaStackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginLeft="60sp"
            android:layout_weight="0.99"
            android:background="#ffcc00"
            android:text="@string/create_router"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>